# zero_deploy_01

./: .exemplo.env  README.md  duckdb.db  pipeline_02.py  psycopg2-2.9.9-cp312-cp312-linux_x86_64.whl  pypeline00.py  pyproject.toml  requirements.txt  tutorial.txt
workshop-aberto-02-main/workshop-aberto-02-main/: pipeline_00.py
