[tool.poetry]
name = "zero-deploy-01"
version = "0.1.0"
description = ""
authors = ["rodrigo ubuntu <digaosss70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.1.0"
duckdb = "^0.10.0"
streamlit = "^1.32.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
